Fix Java 17 run instructions